--- a/test.ipynb
+++ b/test.ipynb
@@ -28,14 +28,14 @@
     "uploaded_file = st.file_uploader(\"Choose a file\")\n",
     "if uploaded_file is not None:\n",
     "     df = pd.read_csv(uploaded_file, sep='|')\n",
-    "     st.write(df)\n",
-    "     file_container = st.expander(\"Check your uploaded .csv\")\n",
-    "else:\n",
-    "    st.info(\n",
-    "        f\"\"\"\n",
-    "             👆 Upload a .csv file first. Sample to try: [biostats.csv](https://people.sc.fsu.edu/~jburkardt/data/csv/biostats.csv)\n",
-    "             \"\"\"\n",
-    "    )"
+    "     #st.write(df)\n",
+    "     #file_container = st.expander(\"Check your uploaded .csv\")\n",
+    "# else:\n",
+    "#     st.info(\n",
+    "#         f\"\"\"\n",
+    "#              👆 Upload a .csv file first. Sample to try: [biostats.csv](https://people.sc.fsu.edu/~jburkardt/data/csv/biostats.csv)\n",
+    "#              \"\"\"\n",
+    "#     )"
    ]
   },
   {
