--- a/test.ipynb
+++ b/test.ipynb
@@ -28,25 +28,9 @@
     "uploaded_file = st.file_uploader(\"Choose a file\")\n",
     "if uploaded_file is not None:\n",
     "     dataframe = pd.read_csv(uploaded_file, sep='|')\n",
+    "     df = df.dropna()\n",
+    "     df.columns = ['id_user', 'id_task', 'platform', 'case']\n",
     "     st.write(dataframe)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.columns = ['id_user', 'id_task', 'platform', 'case']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.dropna()"
    ]
   },
   {
