--- a/test.ipynb
+++ b/test.ipynb
@@ -21,16 +21,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "uploaded_file = st.file_uploader(\"Choose a file\")\n",
     "if uploaded_file is not None:\n",
     "     dataframe = pd.read_csv(uploaded_file, sep='|')\n",
-    "     df = df.dropna()\n",
-    "     df.columns = ['id_user', 'id_task', 'platform', 'case']\n",
     "     st.write(dataframe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.dropna()\n",
+    "df.columns = ['id_user', 'id_task', 'platform', 'case']"
    ]
   },
   {
