--- a/test.ipynb
+++ b/test.ipynb
@@ -27,8 +27,8 @@
    "source": [
     "uploaded_file = st.file_uploader(\"Choose a file\")\n",
     "if uploaded_file is not None:\n",
-    "     dataframe = pd.read_csv(uploaded_file, sep='|')\n",
-    "     st.write(dataframe)"
+    "     df = pd.read_csv(uploaded_file, sep='|')\n",
+    "     st.write(df)"
    ]
   },
   {
