--- a/test.ipynb
+++ b/test.ipynb
@@ -28,6 +28,8 @@
     "uploaded_file = st.file_uploader(\"Choose a file\")\n",
     "if uploaded_file is not None:\n",
     "     df = pd.read_csv(uploaded_file, sep='|')\n",
+    "     df = df.dropna()\n",
+    "     df.columns = ['id_user', 'id_task', 'platform', 'case']     \n",
     "     st.write(df)"
    ]
   },
@@ -37,8 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.dropna()\n",
-    "df.columns = ['id_user', 'id_task', 'platform', 'case']"
+    "# df = df.dropna()\n",
+    "# df.columns = ['id_user', 'id_task', 'platform', 'case']"
    ]
   },
   {
