--- a/test.ipynb
+++ b/test.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,15 @@
     "if uploaded_file is not None:\n",
     "     df = pd.read_csv(uploaded_file, sep='|')\n",
     "     df = df.dropna()\n",
-    "     df.columns = ['id_user', 'id_task', 'platform', 'case']     \n",
-    "     st.write(df)"
+    "     df.columns = ['id_user', 'id_task', 'platform', 'case']  \n",
+    "     file_container = st.expander(\"Check your uploaded .csv\")   \n",
+    "     st.write(df)\n",
+    "else:\n",
+    "    st.info(\n",
+    "        f\"\"\"\n",
+    "             👆 Upload a .csv file first. Sample to try: [biostats.csv](https://people.sc.fsu.edu/~jburkardt/data/csv/biostats.csv)\n",
+    "             \"\"\"\n",
+    "    )"
    ]
   },
   {
