--- a/test.ipynb
+++ b/test.ipynb
@@ -38,7 +38,8 @@
     }
    ],
    "source": [
-    "uploaded_file = st.file_uploader(\"Choose a file\")\n",
+    "uploaded_file = st.file_uploader(\"Choose a file\", \n",
+    "help=\"To activate 'wide mode', go to the hamburger menu > Settings > turn on 'wide mode'\")\n",
     "\n",
     "\n",
     "if uploaded_file is not None:\n",
