--- a/test.ipynb
+++ b/test.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -31,15 +31,15 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mStopException\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[1;32m/Users/arturfattahov/Number_of_created_tasks/test.ipynb Cell 3'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/arturfattahov/Number_of_created_tasks/test.ipynb#ch0000014?line=9'>10</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/arturfattahov/Number_of_created_tasks/test.ipynb#ch0000014?line=10'>11</a>\u001b[0m     st\u001b[39m.\u001b[39minfo(\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/arturfattahov/Number_of_created_tasks/test.ipynb#ch0000014?line=11'>12</a>\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\"\"\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/arturfattahov/Number_of_created_tasks/test.ipynb#ch0000014?line=12'>13</a>\u001b[0m \u001b[39m             👆 Upload a .csv file first. Sample to try: [biostats.csv](https://people.sc.fsu.edu/~jburkardt/data/csv/biostats.csv)\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/arturfattahov/Number_of_created_tasks/test.ipynb#ch0000014?line=13'>14</a>\u001b[0m \u001b[39m             \u001b[39m\u001b[39m\"\"\"\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/arturfattahov/Number_of_created_tasks/test.ipynb#ch0000014?line=14'>15</a>\u001b[0m     )\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/arturfattahov/Number_of_created_tasks/test.ipynb#ch0000014?line=15'>16</a>\u001b[0m     st\u001b[39m.\u001b[39;49mstop()\n",
+      "\u001b[1;32m/Users/arturfattahov/Number_of_created_tasks/test.ipynb Cell 3'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/arturfattahov/Number_of_created_tasks/test.ipynb#ch0000014?line=10'>11</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/arturfattahov/Number_of_created_tasks/test.ipynb#ch0000014?line=11'>12</a>\u001b[0m     st\u001b[39m.\u001b[39minfo(\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/arturfattahov/Number_of_created_tasks/test.ipynb#ch0000014?line=12'>13</a>\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\"\"\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/arturfattahov/Number_of_created_tasks/test.ipynb#ch0000014?line=13'>14</a>\u001b[0m \u001b[39m             👆 Загрузите файл с расширением .csv\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/arturfattahov/Number_of_created_tasks/test.ipynb#ch0000014?line=14'>15</a>\u001b[0m \u001b[39m             В файле должны стого содержаться следующие столбцы: id пользователя, id задачи, платформа, роль пользователя\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/arturfattahov/Number_of_created_tasks/test.ipynb#ch0000014?line=15'>16</a>\u001b[0m \u001b[39m             \u001b[39m\u001b[39m\"\"\"\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/arturfattahov/Number_of_created_tasks/test.ipynb#ch0000014?line=16'>17</a>\u001b[0m     )\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/arturfattahov/Number_of_created_tasks/test.ipynb#ch0000014?line=17'>18</a>\u001b[0m     st\u001b[39m.\u001b[39;49mstop()\n",
       "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/streamlit/__init__.py:492\u001b[0m, in \u001b[0;36mstop\u001b[0;34m()\u001b[0m\n\u001b[1;32m    <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/streamlit/__init__.py?line=474'>475</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mstop\u001b[39m() \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m NoReturn:\n\u001b[1;32m    <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/streamlit/__init__.py?line=475'>476</a>\u001b[0m     \u001b[39m\"\"\"Stops execution immediately.\u001b[39;00m\n\u001b[1;32m    <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/streamlit/__init__.py?line=476'>477</a>\u001b[0m \n\u001b[1;32m    <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/streamlit/__init__.py?line=477'>478</a>\u001b[0m \u001b[39m    Streamlit will not run any statements after `st.stop()`.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/streamlit/__init__.py?line=489'>490</a>\u001b[0m \n\u001b[1;32m    <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/streamlit/__init__.py?line=490'>491</a>\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/streamlit/__init__.py?line=491'>492</a>\u001b[0m     \u001b[39mraise\u001b[39;00m StopException()\n",
       "\u001b[0;31mStopException\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "uploaded_file = st.file_uploader(\"Choose a file\", \n",
-    "help=\"To activate 'wide mode', go to the hamburger menu > Settings > turn on 'wide mode'\")\n",
+    "uploaded_file = st.file_uploader(\"Выбирете файл\", \n",
+    "help=\"Здесь может быть подсказка'\")\n",
     "\n",
     "\n",
     "if uploaded_file is not None:\n",
@@ -51,7 +51,8 @@
     "else:\n",
     "    st.info(\n",
     "        f\"\"\"\n",
-    "             👆 Upload a .csv file first. Sample to try: [biostats.csv](https://people.sc.fsu.edu/~jburkardt/data/csv/biostats.csv)\n",
+    "             👆 Загрузите файл с расширением .csv\n",
+    "             В файле должны стого содержаться следующие столбцы: id пользователя, id задачи, платформа, роль пользователя\n",
     "             \"\"\"\n",
     "    )\n",
     "    st.stop()"
