--- a/test.ipynb
+++ b/test.ipynb
@@ -38,24 +38,43 @@
     }
    ],
    "source": [
-    "uploaded_file = st.file_uploader(\"Выбирете файл\", \n",
-    "help=\"Здесь может быть подсказка'\")\n",
+    "st.title(\"Количество созданных задач\")\n",
+    "st.write(\"Количество созданных задач с разделением по ролям\")\n",
+    "uploaded_file = st.file_uploader(\"Выбирете файл\")\n",
+    "\n",
+    "\n",
+    "use_example_file = st.checkbox(\n",
+    "    \"Использовать пример выгрузки\", False, help=\"Будет использована старая выгрузка\"\n",
+    ")\n",
+    "\n",
+    "\n",
+    "if use_example_file:\n",
+    "    uploaded_file = \"users_2.csv\"\n",
     "\n",
     "\n",
     "if uploaded_file is not None:\n",
     "     df = pd.read_csv(uploaded_file, sep='|')\n",
-    "     df = df.dropna()\n",
     "     df.columns = ['id_user', 'id_task', 'platform', 'case']  \n",
     "     file_container = st.expander(\"Check your uploaded .csv\")   \n",
     "     st.write(df)\n",
-    "else:\n",
-    "    st.info(\n",
-    "        f\"\"\"\n",
-    "             👆 Загрузите файл с расширением .csv\n",
-    "             В файле должны стого содержаться следующие столбцы: id пользователя, id задачи, платформа, роль пользователя\n",
-    "             \"\"\"\n",
-    "    )\n",
-    "    st.stop()"
+    "     df = df.dropna()\n",
+    "     st.markdown(\"### Обзор выгрузки\")\n",
+    "     st.dataframe(df.head())\n",
+    "\n",
+    "\n",
+    "\n",
+    "st.info(\n",
+    "    f\"\"\"\n",
+    "     👆 Загрузите файл с расширением csv. В файле должны стого содержаться следующие столбцы:\n",
+    "         - id пользователя\n",
+    "         - id задачи\n",
+    "         - платформа\n",
+    "         - роль пользователя\n",
+    "         \"\"\"\n",
+    ")\n",
+    "\n",
+    "if not uploaded_file or not use_example_file:\n",
+    "        st.stop()"
    ]
   },
   {
@@ -117,38 +136,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print('Количество провайдеров, которые создали хотя бы одну задачу:', creat_more_one_task_prov[0])\n",
-    "# print('Количество заказчиков, которые создали хотя бы одну задачу:', creat_more_one_task_exe[0])\n",
-    "\n",
-    "\n",
-    "\n",
-    "# display('Процент провайдеров, которые создали хотя бы одну задачу: {:.0f}%'\n",
-    "#         .format(creat_more_one_task_prov[0] * 100 / all_provider))\n",
-    "\n",
-    "# display('Процент заказчиков, которые создали хотя бы одну задачу: {:.0f}%'\n",
-    "#         .format(creat_more_one_task_exe[0] * 100 / all_executor))\n",
-    "\n",
-    "# display('Процент пользователей, которые создали хотя бы одну задачу: {:.0f}%'\n",
-    "#         .format(creat_more_one_task * 100 / number_users))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tt = creat_more_one_task_prov[0] * 100 / all_provider\n",
-    "mm = creat_more_one_task_exe[0] * 100 / all_executor\n",
-    "ii = creat_more_one_task * 100 / number_users"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -183,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "st.write('Процент провайдеров, которые создали хотя бы одну задачу:', tt)"
+    "st.write('Процент провайдеров, которые создали хотя бы одну задачу:', creat_more_one_task_prov[0] * 100 / all_provider)"
    ]
   },
   {
@@ -192,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "st.write('Процент заказчиков, которые создали хотя бы одну задачу:', mm)"
+    "st.write('Процент заказчиков, которые создали хотя бы одну задачу:', creat_more_one_task_exe[0] * 100 / all_executor)"
    ]
   },
   {
@@ -201,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "st.write('Процент пользователей, которые создали хотя бы одну задачу:', ii)"
+    "st.write('Процент пользователей, которые создали хотя бы одну задачу:', creat_more_one_task * 100 / number_users)"
    ]
   }
  ],
